General layout fixes / unit swaps
It doesn’t look *terrible* on things bigger than mobile now… still not
great but it’ll do.

--- a/css/main.scss
+++ b/css/main.scss
@@ -21,9 +21,12 @@ $mobile:           450px;
 @import "menu";
 @import "destination-menu";
 
+html {
+    background: #000;
+}
 
 .wrapper {
-    width: 100vw;
+    width: 100%;
     overflow-x: hidden;
 }
 
@@ -31,11 +34,11 @@ $mobile:           450px;
     position: relative;
     transition: transform .4s ease;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     overflow-x: hidden;
     animation: zoom-out 1s ease;
     background: $white;
-    padding-bottom: $spacing-unit*12;
+    padding-bottom: $spacing-unit*10;
 }
 
 @keyframes zoom-out {
@@ -45,7 +48,8 @@ $mobile:           450px;
 
 .button {
     display: block;
-    width: 70vw;
+    width: 70%;
+    max-width: 300px;
     margin: $spacing-unit*2 auto;
     height: 50px;
     line-height: 50px;
@@ -64,8 +68,9 @@ $mobile:           450px;
 .home h1 {
     position: fixed;
     bottom: 0;
-    left: 0;
+    right: 0;
     width: 100vw;
+    max-width: 400px;
     padding: $spacing-unit*2.5 $spacing-unit*3.5;
 }
 
@@ -81,9 +86,12 @@ $mobile:           450px;
     left: 0;
     right: $spacing-unit*6;
     bottom: $spacing-unit*6;
+    max-width: 700px;
     background-image: url(#{$base-url}/images/home_background.png);
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: $lightgrey;
+    background-position: 50% 50%;
 }
 
 
@@ -150,12 +158,15 @@ $mobile:           450px;
     font-size: $small-font-size;
     line-height: 1.4;
     padding: 0 $spacing-unit*4;
+    margin: auto;
+    max-width: 500px;
 }
 
 .destination.brands .brand-list>li .image {
     width: 100%;
     height: 300px;
-    margin: -$spacing-unit*2 0 $spacing-unit*2 0;
+    max-width: 600px;
+    margin: -$spacing-unit*2 auto $spacing-unit*2 auto;
     background-color: $lightgrey;
     background-size: cover;
     background-repeat: no-repeat;
@@ -169,6 +180,7 @@ $mobile:           450px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
+    background-color: $black;
     color: $white;
     width: 100%;
 }
@@ -181,4 +193,6 @@ $mobile:           450px;
     font-size: $small-font-size;
     line-height: 1.4;
     padding: 0 $spacing-unit*4;
+    margin: auto;
+    max-width: 500px;
 }
